--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,6 +1,6 @@
 .navbar {
     font-family: 'Poppins';
-    height: 63px;
+    // height: 60px;
 
     .logo {
         max-width: 225px;
@@ -13,7 +13,6 @@
     .nav-link{
         color: #4D4D4D;
         padding: 12px 20px !important;
-
     }
 
     .nav-cta {
@@ -25,7 +24,7 @@
         animation: bounce 1.5s ease-out;
     }
 
-    .show{
+    .show:after{
         background-color: white;
     }
 }
